Messed up first merge (forgot to add some files). Adding build files again

--- a/kickstarts/centos6-livecd.cfg
+++ b/kickstarts/centos6-livecd.cfg
@@ -39,10 +39,12 @@ text
 # Repository Configuration
 ##############################
 repo --name=a-base      --baseurl=http://linux.mirrors.es.net/centos/6/os/[BUILD_ARCH] --excludepkgs=kernel*
-repo --name=a-updates   --mirrorlist=http://software.internet2.edu/branches/epel6-repo/rpms/mirrors-Toolkit-CentOS-Updates-[BUILD_ARCH] --excludepkgs=kernel*
-repo --name=a-EPEL      --mirrorlist=http://software.internet2.edu/branches/epel6-repo/rpms/mirrors-Toolkit-EPEL-[BUILD_ARCH]
+repo --name=a-updates   --mirrorlist=http://software.internet2.edu/rpms/el6/mirrors-Toolkit-CentOS-Updates-[BUILD_ARCH] --excludepkgs=kernel*
+repo --name=a-EPEL      --mirrorlist=http://software.internet2.edu/rpms/el6/mirrors-Toolkit-EPEL-[BUILD_ARCH]
 repo --name=a-Internet2 --baseurl=http://software.internet2.edu/rpms/el6/[BUILD_ARCH]/main/
 repo --name=a-Web100    --baseurl=http://software.internet2.edu/web100_kernel/rpms/el6/[BUILD_ARCH]/main/
+repo --name=a-DataStax  --baseurl=http://rpm.datastax.com/community
+repo --name=a-scl       --baseurl=http://linux.mirrors.es.net/centos/6/SCL/[BUILD_ARCH]/
 
 ##############################
 # Install Packages
@@ -96,6 +98,12 @@ xkeyboard-config
 ##############################
 # EPEL
 epel-release
+
+# SCL 
+centos-release-SCL
+
+#datastax (cassandra yum repo)
+datastax-repo
 
 # sk98lin Kernel Modules
 kmod-sk98lin
@@ -154,11 +162,25 @@ cp /etc/resolv.conf $INSTALL_ROOT/etc/resolv.conf
 /usr/sbin/chroot $INSTALL_ROOT <<EOS
 
 ##############################
+# Make sure some permissions are correct
+##############################
+chown mysql:mysql /var/run/mysqld
+chown perfsonar:perfsonar /opt/SimpleLS/bootstrap/etc/*
+chown perfsonar:perfsonar /opt/perfsonar_ps/*/etc/*
+chown apache:apache /opt/perfsonar_ps/serviceTest/etc/*
+
+##############################
 # Initialize the MySQL Databases
 ##############################
 /sbin/service mysqld start
 /opt/perfsonar_ps/toolkit/scripts/initialize_databases
 /sbin/service mysqld stop
+
+##############################
+# Add the LiveCD keyword
+##############################
+echo "site_project=pS-NPToolkit-LiveCD" >> /opt/perfsonar_ps/toolkit/etc/administrative_info
+echo "site_project=pS-NPToolkit-LiveCD" >> /opt/perfsonar_ps/ls_registration_daemon/etc/ls_registration_daemon.conf
 
 ##############################
 # Disable Readahead
