--- a/kickstarts/centos6-netinstall.cfg
+++ b/kickstarts/centos6-netinstall.cfg
@@ -40,6 +40,8 @@ repo --name=a-updates	--mirrorlist=http://software.internet2.edu/rpms/el6/mirror
 repo --name=a-EPEL	--mirrorlist=http://software.internet2.edu/rpms/el6/mirrors-Toolkit-EPEL-[BUILD_ARCH]
 repo --name=a-Internet2	--baseurl=http://software.internet2.edu/rpms/el6/[BUILD_ARCH]/main/
 repo --name=a-Web100	--baseurl=http://software.internet2.edu/web100_kernel/rpms/el6/[BUILD_ARCH]/main/
+repo --name=a-DataStax  --baseurl=http://rpm.datastax.com/community
+repo --name=a-scl       --baseurl=http://linux.mirrors.es.net/centos/6/SCL/[BUILD_ARCH]/
 
 ##############################
 # Install Packages
@@ -93,6 +95,12 @@ xkeyboard-config
 ##############################
 # EPEL
 epel-release
+
+# SCL 
+centos-release-SCL
+
+#datastax (cassandra yum repo)
+datastax-repo
 
 # sk98lin Kernel Modules
 kmod-sk98lin
