--- a/kickstarts/centos6-base.cfg
+++ b/kickstarts/centos6-base.cfg
@@ -40,6 +40,8 @@ repo --name=a-updates   --mirrorlist=http://software.internet2.edu/branches/epel
 repo --name=a-EPEL      --mirrorlist=http://software.internet2.edu/branches/epel6-repo/rpms/mirrors-Toolkit-EPEL-i386
 repo --name=a-Internet2 --baseurl=http://software.internet2.edu/rpms/el6/i386/main/
 repo --name=a-Web100    --baseurl=http://software.internet2.edu/web100_kernel/rpms/el6/i386/main/
+repo --name=a-DataStax  --baseurl=http://rpm.datastax.com/community
+repo --name=a-scl       --baseurl=http://linux.mirrors.es.net/centos/6/SCL/i386/
 
 ##############################
 # Install Packages
@@ -93,6 +95,12 @@ xkeyboard-config
 ##############################
 # EPEL
 epel-release
+
+# SCL 
+centos-release-SCL
+
+#datastax (cassandra yum repo)
+datastax-repo
 
 # sk98lin Kernel Modules
 kmod-sk98lin
