--- a/revisor/pspt-x86_64.conf
+++ b/revisor/pspt-x86_64.conf
@@ -21,11 +21,17 @@ baseurl=http://mirror.centos.org/centos/6/os/x86_64/
 enabled=1
 gpgcheck=0
 
-[centos-security]
-name=CentOS 6 - x86_64 - security
+[centos-updates]
+name=CentOS 6 - x86_64 - updates
 baseurl=http://mirror.centos.org/centos/6/updates/x86_64/
 ## If you want to include the security updates in your compose then change
 ## enabled=0 to enabled=1
+enabled=1
+gpgcheck=0
+
+[centos-extras]
+name=CentOS 6 - x86_64 - Extras
+baseurl=http://mirror.centos.org/centos/6/extras/x86_64/
 enabled=1
 gpgcheck=0
 
@@ -40,7 +46,7 @@ gpgcheck=0
 
 [Internet2]
 name = Internet2 RPM Repository - software.internet2.edu - main
-baseurl = http://software.internet2.edu/branches/release-3.4/rpms/el6/x86_64/main/
+baseurl = http://software.internet2.edu/rpms/el6/x86_64/main/
 enabled = 1
 protect = 0
 gpgkey = file:///etc/pki/rpm-gpg/RPM-GPG-KEY-Internet2
@@ -48,7 +54,7 @@ gpgcheck = 1
 
 [Internet2-web100_kernel]
 name = Internet2 Web100 Kernel RPM Repository - software.internet2.edu - main
-baseurl = http://software.internet2.edu/rpms/el6/x86_64/main/
+baseurl = http://software.internet2.edu/web100_kernel/rpms/el6/x86_64/main/
 enabled = 1
 protect = 0
 gpgkey = file:///etc/pki/rpm-gpg/RPM-GPG-KEY-Internet2
