ng build files to build 3.4 image

--- a/revisor/pspt-i386.conf
+++ b/revisor/pspt-i386.conf
@@ -46,7 +46,7 @@ gpgcheck=0
 
 [Internet2]
 name = Internet2 RPM Repository - software.internet2.edu - main
-baseurl = http://software.internet2.edu/rpms/el6/i386/main/
+baseurl = http://software.internet2.edu/branches/release-3.4/rpms/el6/i386/main/
 enabled = 1
 protect = 0
 gpgkey = file:///etc/pki/rpm-gpg/RPM-GPG-KEY-Internet2
@@ -59,3 +59,9 @@ enabled = 1
 protect = 0
 gpgkey = file:///etc/pki/rpm-gpg/RPM-GPG-KEY-Internet2
 gpgcheck = 1
+
+[datastax]
+name= DataStax Repo for Apache Cassandra
+baseurl=http://rpm.datastax.com/community
+enabled=1
+gpgcheck=0
