--- a/revisor/pspt-x86_64.conf
+++ b/revisor/pspt-x86_64.conf
@@ -46,7 +46,7 @@ gpgcheck=0
 
 [Internet2]
 name = Internet2 RPM Repository - software.internet2.edu - main
-baseurl = http://software.internet2.edu/branches/release-3.4/rpms/el6/x86_64/main/
+baseurl = http://software.internet2.edu/rpms/el6/x86_64/main/
 enabled = 1
 protect = 0
 gpgkey = file:///etc/pki/rpm-gpg/RPM-GPG-KEY-Internet2
