Updating fullinstall to work with CentOS 6.6. Excluding nss-softokn* and using 6.5 version because introduces bug during CentOS install

--- a/revisor/pspt-i386.conf
+++ b/revisor/pspt-i386.conf
@@ -19,6 +19,14 @@ failovermethod=priority
 name=CentOS 6 - i386
 baseurl=http://mirror.centos.org/centos/6/os/i386/
 enabled=1
+exclude=nss-softokn*
+gpgcheck=0
+
+[centos-65-vault]
+name=CentOS 6.5 Vault - x86_64
+baseurl=http://vault.centos.org/6.5/updates/i386/
+enabled=1
+includepkgs=nss-softokn*
 gpgcheck=0
 
 [centos-updates]
@@ -27,6 +35,7 @@ baseurl=http://mirror.centos.org/centos/6/updates/i386/
 ## If you want to include the security updates in your compose then change
 ## enabled=0 to enabled=1
 enabled=1
+exclude=nss-softokn*
 gpgcheck=0
 
 [centos-extras]
