--- a/revisor/pspt-x86_64.conf
+++ b/revisor/pspt-x86_64.conf
@@ -19,7 +19,16 @@ failovermethod=priority
 name=CentOS 6 - x86_64
 baseurl=http://mirror.centos.org/centos/6/os/x86_64/
 enabled=1
+exclude=nss-softokn*
 gpgcheck=0
+
+[centos-65-vault]
+name=CentOS 6.5 Vault - x86_64
+baseurl=http://vault.centos.org/6.5/updates/x86_64/
+enabled=1
+includepkgs=nss-softokn*
+gpgcheck=0
+
 
 [centos-updates]
 name=CentOS 6 - x86_64 - updates
@@ -27,6 +36,7 @@ baseurl=http://mirror.centos.org/centos/6/updates/x86_64/
 ## If you want to include the security updates in your compose then change
 ## enabled=0 to enabled=1
 enabled=1
+exclude=nss-softokn*
 gpgcheck=0
 
 [centos-extras]
