--- a/revisor/revisor.conf
+++ b/revisor/revisor.conf
@@ -26,7 +26,7 @@ destination_directory = .
 
 # These are for SL specific stuff
 release_pkgs = ^centos-release.*$
-release_files = EULA GPL RPM-GPG-KEY-CentOS-6 RPM-GPG-KEY-CentOS-Debug-6 RPM-GPG-KEY-CentOS-Security-6 RPM-GPG-KEY-CentOS-Testing-6 RPM-GPG-KEY-EPEL-6
+release_files = EULA GPL ^RPM-GPG.*$ 
 bugurl = Send email to perfsonar-user@internet2.edu
 
 ##
