Setting scripts to use staging repo

--- a/kickstarts/centos6-base.cfg
+++ b/kickstarts/centos6-base.cfg
@@ -40,6 +40,7 @@ repo --name=a-updates   --mirrorlist=http://software.internet2.edu/rpms/el6/mirr
 repo --name=a-EPEL      --mirrorlist=http://software.internet2.edu/rpms/el6/mirrors-Toolkit-EPEL-i386
 repo --name=a-Internet2 --baseurl=http://software.internet2.edu/rpms/el6/i386/main/
 repo --name=a-Web100    --baseurl=http://software.internet2.edu/web100_kernel/rpms/el6/i386/main/
+repo --name=a-Internet2-staging	--baseurl=http://software.internet2.edu/branches/staging/rpms/el6/[BUILD_ARCH]/main/
 
 ##############################
 # Install Packages
