--- a/kickstarts/centos6-netinstall.cfg
+++ b/kickstarts/centos6-netinstall.cfg
@@ -38,6 +38,7 @@ repo --name=a-updates	--mirrorlist=http://software.internet2.edu/rpms/el6/mirror
 repo --name=a-EPEL	--mirrorlist=http://software.internet2.edu/rpms/el6/mirrors-Toolkit-EPEL-[BUILD_ARCH]
 repo --name=a-Internet2	--baseurl=http://software.internet2.edu/rpms/el6/[BUILD_ARCH]/main/
 repo --name=a-Web100	--baseurl=http://software.internet2.edu/web100_kernel/rpms/el6/[BUILD_ARCH]/main/
+repo --name=a-Internet2-staging	--baseurl=http://software.internet2.edu/branches/staging/rpms/el6/[BUILD_ARCH]/main/
 
 ##############################
 # Install Packages
