--- a/revisor/pspt-x86_64.conf
+++ b/revisor/pspt-x86_64.conf
@@ -70,3 +70,11 @@ protect = 0
 gpgkey = file:///etc/pki/rpm-gpg/RPM-GPG-KEY-Internet2
 gpgcheck = 1
 
+[Internet2-staging]
+name = Internet2 Staging RPM Repository
+baseurl = http://software.internet2.edu/branches/staging/rpms/el6/x86_64/main/
+enabled = 1
+protect = 0
+gpgkey = file:///etc/pki/rpm-gpg/RPM-GPG-KEY-Internet2
+gpgcheck = 1
+
