Overhaul of toolkit building. Dropped revisor, cleaned-up dependencies, allowed graphical mode and lots of small changes to streamline process

--- a/kickstarts/centos6-netinstall.cfg
+++ b/kickstarts/centos6-netinstall.cfg
@@ -4,13 +4,9 @@ url --url=http://linux.mirrors.es.net/centos/6/os/[BUILD_ARCH]
 ##############################
 # System Configuration
 ##############################
-timezone --utc America/Los_Angeles
-
 auth --enableshadow --enablemd5
 firstboot --disabled
 firewall --disabled
-#rootpw --iscrypted Xavf0PU1CJn.U
-rootpw --iscrypted saFLGt/QKS6yw 
 selinux --disabled
 skipx
 
@@ -20,15 +16,7 @@ skipx
 zerombr
 bootloader --location=mbr
 
-#clearpart --all
-
 network --onboot=yes
-
-##############################
-# Installation Configuration
-##############################
-interactive
-text
 
 ##############################
 # Repository Configuration
@@ -66,11 +54,11 @@ less
 libgcc
 libgomp
 libpcap
-mysql-devel
 ntp
+openssh-clients
+openssh-server
 passwd
 patch
-perl-DBD-mysql
 perl-DBI
 php
 php-gd
@@ -94,39 +82,16 @@ epel-release
 # sk98lin Kernel Modules
 kmod-sk98lin
 
-# Open SSH
-openssh-clients
-openssh-server
-
 # Web 100
 web100_userland
 
 # Internet2 Repository
 Internet2-repo
 
-# iperf3
-iperf3
-
-# tcptrace and modified xplot
-tcptrace
-xplot-tcptrace
-
-
-# perfSonar
-bwctl-client
-bwctl-server
-ndt
-npad
-nuttcp
-owamp-client
-owamp-server
-
+# perfSONAR Toolkit
 perl-perfSONAR_PS-Toolkit
 perl-perfSONAR_PS-Toolkit-SystemEnvironment
 
-perl-perfSONAR_PS-LSCacheDaemon
-perl-perfSONAR_PS-LSRegistrationDaemon
-perl-perfSONAR_PS-MeshConfig-Agent
 %end
 
 ##############################
