--- a/kickstarts/centos6-fullinstall.cfg
+++ b/kickstarts/centos6-fullinstall.cfg
@@ -3,15 +3,9 @@ install
 ##############################
 # System Configuration
 ##############################
-lang en_US.UTF-8
-keyboard us
-timezone --utc America/Los_Angeles
-
 auth --enableshadow --enablemd5
 firstboot --disabled
 firewall --disabled
-#rootpw --iscrypted Xavf0PU1CJn.U
-rootpw --iscrypted saFLGt/QKS6yw 
 selinux --disabled
 skipx
 
@@ -24,22 +18,12 @@ bootloader --location=mbr
 network --onboot=yes
 
 ##############################
-# Installation Configuration
-##############################
-interactive
-text
-
-##############################
 # Install Packages
 ##############################
 %packages
 @base
 @core
 @console-internet
-
-# Anaconda is needed for revisor to build the DVD
-anaconda
-syslinux
 
 authconfig
 bash
@@ -60,11 +44,11 @@ less
 libgcc
 libgomp
 libpcap
-mysql-devel
 ntp
+openssh-clients
+openssh-server
 passwd
 patch
-perl-DBD-mysql
 perl-DBI
 php
 php-gd
@@ -88,45 +72,42 @@ epel-release
 # sk98lin Kernel Modules
 kmod-sk98lin
 
-# Open SSH
-openssh-clients
-openssh-server
-
 # Web 100
 web100_userland
 
 # Internet2 Repository
 Internet2-repo
 
-# iperf3
-iperf3
-
-# tcptrace and modified xplot
-tcptrace
-xplot-tcptrace
-
-
-# perfSonar
-bwctl-client
-bwctl-server
-ndt
-npad
-nuttcp
-owamp-client
-owamp-server
-
+# perfSONAR Toolkit
 perl-perfSONAR_PS-Toolkit
 perl-perfSONAR_PS-Toolkit-SystemEnvironment
 
-perl-perfSONAR_PS-LSCacheDaemon
-perl-perfSONAR_PS-LSRegistrationDaemon
-perl-perfSONAR_PS-MeshConfig-Agent
 %end
 
 ##############################
 # Run Post Scripts
 ##############################
 %post --log=/root/post_install.log
+
+##############################
+# Resize default partition layout.
+# Interactive mode breaks partitioning 
+# commands so have to do it here.
+##############################
+# Backup /home though probably not much in it
+cp -r /home /home.bak
+# Remove the partition
+umount /dev/mapper/VolGroup-lv_home
+lvremove -f /dev/VolGroup/lv_home
+# restore home. might already be there by default, hence the somewhat round-about copying
+mkdir -p /home
+mv /home.bak/* /home/
+rm -rf /home.bak/
+#Expand the root partition
+lvextend -r -l +100%FREE /dev/VolGroup/lv_root
+#Update fstab so it doesnt look for /home
+grep -v "VolGroup-lv_home" /etc/fstab > /etc/fstab.new
+mv -f /etc/fstab.new /etc/fstab
 
 ##############################
 # Disable Readahead
