Fix for iptables not getting properly configured on install. Adding it to rc.local makes it happy. Probably good to run on boot anyways.

--- a/kickstarts/centos6-fullinstall.cfg
+++ b/kickstarts/centos6-fullinstall.cfg
@@ -114,4 +114,10 @@ mv -f /etc/fstab.new /etc/fstab
 # Disable Readahead
 ##############################
 sed -i 's/=\"yes\"/=\"no\"/g' /etc/sysconfig/readahead
+
+##############################
+# Configure Firewall
+##############################
+echo "" >> /etc/rc.local
+echo "/opt/perfsonar_ps/toolkit/scripts/configure_firewall install" >> /etc/rc.local
 %end
