Updating packages for toolkit building script

--- a/kickstarts/centos6-fullinstall.cfg
+++ b/kickstarts/centos6-fullinstall.cfg
@@ -50,10 +50,6 @@ openssh-server
 passwd
 patch
 perl-DBI
-php
-php-gd
-php-snmp
-php-xml
 policycoreutils
 rootfiles
 syslinux
@@ -79,8 +75,8 @@ web100_userland
 Internet2-repo
 
 # perfSONAR Toolkit
-perl-perfSONAR_PS-Toolkit
-perl-perfSONAR_PS-Toolkit-SystemEnvironment
+perfsonar-toolkit
+perfsonar-toolkit-systemenv
 
 %end
 
