--- a/kickstarts/centos6-netinstall.cfg
+++ b/kickstarts/centos6-netinstall.cfg
@@ -60,10 +60,6 @@ openssh-server
 passwd
 patch
 perl-DBI
-php
-php-gd
-php-snmp
-php-xml
 policycoreutils
 rootfiles
 syslinux
@@ -89,8 +85,8 @@ web100_userland
 Internet2-repo
 
 # perfSONAR Toolkit
-perl-perfSONAR_PS-Toolkit
-perl-perfSONAR_PS-Toolkit-SystemEnvironment
+perfsonar-toolkit
+perfsonar-toolkit-systemenv
 
 %end
 
