--- a/kickstarts/centos6-netinstall.cfg
+++ b/kickstarts/centos6-netinstall.cfg
@@ -119,4 +119,10 @@ mv -f /etc/fstab.new /etc/fstab
 # Disable Readahead
 ##############################
 sed -i 's/=\"yes\"/=\"no\"/g' /etc/sysconfig/readahead
+
+##############################
+# Configure Firewall
+##############################
+echo "" >> /etc/rc.local
+echo "/usr/lib/perfsonar/scripts/configure_firewall install" >> /etc/rc.local
 %end
