--- a/kickstarts/centos7-netinstall.cfg
+++ b/kickstarts/centos7-netinstall.cfg
@@ -25,6 +25,7 @@ repo --name=a-base	--baseurl=http://linux.mirrors.es.net/centos/7/os/[BUILD_ARCH
 repo --name=a-updates	--mirrorlist=http://software.internet2.edu/rpms/el7/mirrors-Toolkit-CentOS-Updates-[BUILD_ARCH] --excludepkgs=kernel*
 repo --name=a-EPEL	--mirrorlist=http://software.internet2.edu/rpms/el7/mirrors-Toolkit-EPEL-[BUILD_ARCH]
 repo --name=a-Internet2	--baseurl=http://software.internet2.edu/rpms/el7/[BUILD_ARCH]/main/
+repo --name=a-Internet2-staging	--baseurl=http://software.internet2.edu/branches/staging/rpms/el7/[BUILD_ARCH]/main/
 
 ##############################
 # Install Packages
@@ -76,6 +77,7 @@ epel-release
 
 # Internet2 Repository
 Internet2-repo
+Internet2-repo-staging
 
 # perfSONAR Toolkit
 perfsonar-toolkit
