Fix firewalld not running on netinstall

--- a/kickstarts/centos7-netinstall.cfg
+++ b/kickstarts/centos7-netinstall.cfg
@@ -6,7 +6,6 @@ url --url=http://linux.mirrors.es.net/centos/7/os/[BUILD_ARCH]
 ##############################
 auth --enableshadow --enablemd5
 firstboot --disabled
-firewall --disabled
 selinux --disabled
 skipx
 
@@ -120,4 +119,5 @@ sed -i 's/=\"yes\"/=\"no\"/g' /etc/sysconfig/readahead
 ##############################
 echo "" >> /etc/rc.local
 echo "/usr/lib/perfsonar/scripts/configure_firewall install" >> /etc/rc.local
+chmod +x /etc/rc.local
 %end
