Fixes #3. Records installation type in post install step

--- a/kickstarts/centos7-netinstall.cfg
+++ b/kickstarts/centos7-netinstall.cfg
@@ -127,4 +127,11 @@ echo "if [ \$? -eq 1 ]; then" >> /etc/rc.local
 echo "    yum reinstall -y pscheduler-server" >> /etc/rc.local
 echo "fi" >> /etc/rc.local
 chmod +x /etc/rc.local
+
+##########################################
+# Record installation type
+##########################################
+mkdir -p /var/lib/perfsonar/bundles/
+echo "netinstall-iso" > /var/lib/perfsonar/bundles/install_type
+
 %end
