Since talking to postgresql during the anaconda setup process doesn't play nice, we have this hack to setup the databases on boot. Changing that hack to check if the pscheduler role exists instead of just checkiong if referenced in pg_hba.conf

--- a/kickstarts/centos7-fullinstall.cfg
+++ b/kickstarts/centos7-fullinstall.cfg
@@ -114,8 +114,8 @@ echo "/usr/lib/perfsonar/scripts/configure_firewall install" >> /etc/rc.local
 # Make sure postgresql is setup properly
 ##########################################
 echo "/usr/lib/perfsonar/scripts/system_environment/configure_esmond" >> /etc/rc.local
-echo "grep -q pscheduler /var/lib/pgsql/9.5/data/pg_hba.conf" >> /etc/rc.local
-echo "if [ \$? -eq 1 ]; then" >> /etc/rc.local
+echo "PSCHED_DB_USER_EXISTS=\$(su -l postgres -c \"psql -tAc \\\"SELECT 1 FROM pg_roles WHERE rolname='pscheduler'\\\"\" 2> /dev/null)" >> /etc/rc.local
+echo "if [ \"\$PSCHED_DB_USER_EXISTS\" != \"1\" ]; then" >> /etc/rc.local
 echo "    yum reinstall -y pscheduler-server" >> /etc/rc.local
 echo "fi" >> /etc/rc.local
 chmod +x /etc/rc.local
