Fix for #4. Can't guarantee chronyd is installed before toolkit, so can't disable it. We could make it a dependency but that seems silly just so we can disable it. Since this only affects the ISO where you have blank slate, fixing in kickstart.

--- a/kickstarts/centos7-fullinstall.cfg
+++ b/kickstarts/centos7-fullinstall.cfg
@@ -118,6 +118,15 @@ echo "PSCHED_DB_USER_EXISTS=\$(su -l postgres -c \"psql -tAc \\\"SELECT 1 FROM p
 echo "if [ \"\$PSCHED_DB_USER_EXISTS\" != \"1\" ]; then" >> /etc/rc.local
 echo "    yum reinstall -y pscheduler-server" >> /etc/rc.local
 echo "fi" >> /etc/rc.local
+
+###################################################################
+# Disable chronyd, enable ntpd since can't guarantee install order
+###################################################################
+echo "systemctl disable chronyd" >> /etc/rc.local
+echo "systemctl stop chronyd" >> /etc/rc.local
+echo "systemctl enable ntpd" >> /etc/rc.local
+echo "systemctl start ntpd" >> /etc/rc.local
+
 chmod +x /etc/rc.local
 
 ##########################################
