--- a/kickstarts/centos7-netinstall.cfg
+++ b/kickstarts/centos7-netinstall.cfg
@@ -126,6 +126,15 @@ echo "PSCHED_DB_USER_EXISTS=\$(su -l postgres -c \"psql -tAc \\\"SELECT 1 FROM p
 echo "if [ \"\$PSCHED_DB_USER_EXISTS\" != \"1\" ]; then" >> /etc/rc.local
 echo "    yum reinstall -y pscheduler-server" >> /etc/rc.local
 echo "fi" >> /etc/rc.local
+
+###################################################################
+# Disable chronyd, enable ntpd since can't guarentee install order
+###################################################################
+echo "systemctl disable chronyd" >> /etc/rc.local
+echo "systemctl stop chronyd" >> /etc/rc.local
+echo "systemctl enable ntpd" >> /etc/rc.local
+echo "systemctl start ntpd" >> /etc/rc.local
+
 chmod +x /etc/rc.local
 
 ##########################################
