Adding pscheduler internal db-update to rc.local

--- a/kickstarts/centos7-fullinstall.cfg
+++ b/kickstarts/centos7-fullinstall.cfg
@@ -115,9 +115,7 @@ echo "/usr/lib/perfsonar/scripts/configure_firewall install" >> /etc/rc.local
 ##########################################
 echo "/usr/lib/perfsonar/scripts/system_environment/configure_esmond new" >> /etc/rc.local
 echo "PSCHED_DB_USER_EXISTS=\$(su -l postgres -c \"psql -tAc \\\"SELECT 1 FROM pg_roles WHERE rolname='pscheduler'\\\"\" 2> /dev/null)" >> /etc/rc.local
-echo "if [ \"\$PSCHED_DB_USER_EXISTS\" != \"1\" ]; then" >> /etc/rc.local
-echo "    yum reinstall -y pscheduler-server" >> /etc/rc.local
-echo "fi" >> /etc/rc.local
+echo "pscheduler internal db-update" >> /etc/rc.local
 
 ###################################################################
 # Disable chronyd, enable ntpd since can't guarantee install order
