Replacing reference to Internet2-repo with perfSONAR-repo

--- a/kickstarts/centos7-fullinstall.cfg
+++ b/kickstarts/centos7-fullinstall.cfg
@@ -65,8 +65,8 @@ xkeyboard-config
 # EPEL
 epel-release
 
-# Internet2 Repository
-Internet2-repo
+# perfSONAR Repository
+perfSONAR-repo
 
 # perfSONAR Toolkit
 perfsonar-toolkit
