--- a/kickstarts/centos7-netinstall.cfg
+++ b/kickstarts/centos7-netinstall.cfg
@@ -23,7 +23,7 @@ network --onboot=yes
 repo --name=a-base	--baseurl=http://linux.mirrors.es.net/centos/7/os/[BUILD_ARCH] --excludepkgs=kernel*
 repo --name=a-updates	--mirrorlist=http://software.internet2.edu/rpms/el7/mirrors-Toolkit-CentOS-Updates-[BUILD_ARCH] --excludepkgs=kernel*
 repo --name=a-EPEL	--mirrorlist=http://software.internet2.edu/rpms/el7/mirrors-Toolkit-EPEL-[BUILD_ARCH]
-repo --name=a-Internet2	--baseurl=http://software.internet2.edu/rpms/el7/[BUILD_ARCH]/main/
+repo --name=a-perfSONAR	--baseurl=http://software.internet2.edu/rpms/el7/[BUILD_ARCH]/main/
 
 ##############################
 # Install Packages
@@ -73,8 +73,8 @@ xkeyboard-config
 # EPEL
 epel-release
 
-# Internet2 Repository
-Internet2-repo
+# perfSONAR Repository
+perfSONAR-repo
 
 # perfSONAR Toolkit
 perfsonar-toolkit
