Updating staging URL

--- a/kickstarts/centos7-netinstall.cfg
+++ b/kickstarts/centos7-netinstall.cfg
@@ -24,7 +24,7 @@ repo --name=a-base	--baseurl=http://linux.mirrors.es.net/centos/7/os/[BUILD_ARCH
 repo --name=a-updates	--mirrorlist=http://software.internet2.edu/rpms/el7/mirrors-Toolkit-CentOS-Updates-[BUILD_ARCH] --excludepkgs=kernel*
 repo --name=a-EPEL	--mirrorlist=http://software.internet2.edu/rpms/el7/mirrors-Toolkit-EPEL-[BUILD_ARCH]
 repo --name=a-perfSONAR	--baseurl=http://software.internet2.edu/rpms/el7/[BUILD_ARCH]/main/
-repo --name=a-perfSONAR-staging	--baseurl=http://software.internet2.edu/branches/staging/rpms/el7/[BUILD_ARCH]/main/
+repo --name=a-perfSONAR-staging	--baseurl  https://perfsonar-dev3.grnoc.iu.edu/staging/el/7/[BUILD_ARCH]/perfsonar/
 
 ##############################
 # Install Packages
